# ML-Prediction

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  styleguide.md
src/ml_prediction/: prediction.py
src/ml_prediction/evaluation/: binaryclass.py  check.py  evaluator.py  metrics.py  multiclass.py  multilabel.py
src/ml_prediction/explainability/: ml_explainer.py  shap_2_probas.py
src/ml_prediction/featuring/: features.py
src/ml_prediction/training/: common_model.py  model_params.py  train_test.py
