[tool.poetry]
name = "ml_prediction"
version = "0.1.0"
description = "Characterization and ML of the ceramic frits production process"
authors = ["GFT Spain <agmn@gft.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = ">=10.0.1"
pandas = ">=1.5.2"
google-cloud-storage = ">=2.6.0"
google-cloud-bigquery = ">=3.4.0"
plotly = ">=5.11.0"
tqdm = "^4.64.1"

mlxtend = "^0.21.0"
lightgbm = "3.3.3"
optuna = "^3.0.5"
shap = ">=0.41.0"
mapie = "^0.5.0"
streamlit = "^1.15.1"
kaleido = "0.2.1"
evalml = { version = "^0.64.0", python = ">=3.10,<3.11" }
dalex = "^1.5.0"
collinearity = "^0.6.1"
feature-engine = "^1.5.2"
scipy = { version = "1.8.1", python = ">=3.10,<3.11" }
scikit-learn = "1.2.0"
dice-ml = "^0.9"
scikit-optimize = "^0.9.0"
jupyter-contrib-nbextensions = ">=0.5.1"
notebook = ">=6.5.1"
jupyter = ">=1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
pytest-cov = ">=4.0.0"
pre-commit = ">=2.20.0"
snakeviz = ">=2.1.1"
pylint = ">=2.15.7"
flake8 = ">=6.0.0"
black = ">=22.10.0"
mypy = ">=0.991"
py-cpuinfo = ">=9.0.0"
pyupgrade = ">=3.3.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# +Info: https://python-poetry.org/docs/pyproject/
