[metadata]
name = ml_prediction
version = 0.0.1
author = GFT AI Spain
author_email = jrml@gft.com
license=proprietary and confidential
url = ""
description = Python Package for Altadia PoC 
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = altadia, setuptools
classifiers =
    Development Status :: 1 - Beta
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.8
packages = find:
# zip_safe = True
include_package_data = True
install_requires = file: requirements.txt

[options.packages.find]
exclude = tests
where = src